lessen issues with #12 by adding ellipsis overflow

--- a/frontend/public/stylesheets/style.styl
+++ b/frontend/public/stylesheets/style.styl
@@ -34,6 +34,11 @@ dt
     .miner
         h4
             margin-left: 40px
+        .pools
+            dd
+                overflow: hidden
+                text-overflow: ellipsis
+                white-space: nowrap
         .devices
             margin-bottom: 20px
             dl
